[gd_scene load_steps=21 format=4 uid="uid://kmp007urqbjp"]

[ext_resource type="TileSet" uid="uid://dablnnvi6auwf" path="res://Tile Sets/floor_tile_set.tres" id="1_h4fw4"]
[ext_resource type="Script" uid="uid://domuenntgxaim" path="res://Scripts/tutorial.gd" id="2_ldgsr"]
[ext_resource type="AudioStream" uid="uid://ifpftkv13etp" path="res://Sounds/keyboard-typing-fast-371229.mp3" id="3_o5yvi"]
[ext_resource type="Texture2D" uid="uid://b5ble0sobm7dl" path="res://Character/character.png" id="4_rku1e"]
[ext_resource type="Texture2D" uid="uid://c3mwp86inmva4" path="res://Textures/chest.png" id="5_rfjv2"]
[ext_resource type="AudioStream" uid="uid://de4wee8grnsv2" path="res://Sounds/funny-laughing-sound-effect-205565.mp3" id="6_1phco"]
[ext_resource type="Texture2D" uid="uid://dvf2hm5aq62lw" path="res://Icons/boost.jpg" id="7_nb51f"]
[ext_resource type="AudioStream" uid="uid://6pe0i4hx0nop" path="res://Sounds/level-up-03-199576.mp3" id="8_nnt18"]
[ext_resource type="Texture2D" uid="uid://e3octdlpiqmm" path="res://Character/NPCs/npc1.png" id="9_ewbju"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e2o6t"]
size = Vector2(21, 58)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fc0e3"]
size = Vector2(385, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_feb5d"]
size = Vector2(201.5, 189)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7jktm"]
size = Vector2(34, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ryrav"]
size = Vector2(141, 70)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eow3j"]
size = Vector2(101, 85)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j5wjh"]
size = Vector2(53, 69)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vef74"]
size = Vector2(38, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hve3p"]
size = Vector2(28, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mfdv2"]
size = Vector2(71, 43)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iotsf"]
size = Vector2(41, 80)

[node name="Game" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
format = 2

[node name="Layer1" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
scale = Vector2(1, 0.993198)
tile_map_data = PackedByteArray("AAAAAAAAAgAAAAEAAAAAAAEAAgAAAAIAAAAAAAIAAgAAAAMAAAAAAAMAAgAAAAQAAAAAAAQAAgAAAAUAAAABAAAAAgABAAEAAAABAAEAAgABAAIAAAABAAIAAgABAAMAAAABAAMAAgABAAQAAAABAAQAAgABAAUAAAACAAAAAgACAAEAAAACAAEAAgACAAIAAAACAAIAAgACAAMAAAACAAMAAgACAAQAAAACAAQAAgACAAUAAAADAAAAAgADAAEAAAADAAEAAgADAAIAAAADAAIAAgADAAMAAAADAAMAAgADAAQAAAADAAQAAgADAAUAAAAEAAAAAgAEAAEAAAAEAAEAAgAEAAIAAAAEAAIAAgAEAAMAAAAEAAMAAgAEAAQAAAAEAAQAAgAEAAUAAAAFAAAAAgAFAAEAAAAFAAEAAgAFAAIAAAAFAAIAAgAFAAMAAAAFAAMAAgAFAAQAAAAFAAQAAgAFAAUAAAAGAAAAAgAAAAEAAAAGAAEAAgAAAAIAAAAGAAIAAgAAAAMAAAAGAAMAAgAAAAQAAAAGAAQAAgAAAAUAAAAHAAAAAgABAAEAAAAHAAEAAgABAAIAAAAHAAIAAgABAAMAAAAHAAMAAgABAAQAAAAHAAQAAgABAAUAAAAIAAAAAgACAAEAAAAIAAEAAgACAAIAAAAIAAIAAgACAAMAAAAIAAMAAgACAAQAAAAIAAQAAgACAAUAAAAJAAAAAgADAAEAAAAJAAEAAgADAAIAAAAJAAIAAgADAAMAAAAJAAMAAgADAAQAAAAJAAQAAgADAAUAAAAKAAAAAgAEAAEAAAAKAAEAAgAEAAIAAAAKAAIAAgAEAAMAAAAKAAMAAgAEAAQAAAAKAAQAAgAEAAUAAAALAAAAAgAFAAEAAAALAAEAAgAFAAIAAAALAAIAAgAFAAMAAAALAAMAAgAFAAQAAAALAAQAAgAFAAUAAAAMAAAAAgAAAAEAAAAMAAEAAgAAAAIAAAAMAAIAAgAAAAMAAAAMAAMAAgAAAAQAAAANAAAAAgABAAEAAAANAAEAAgABAAIAAAANAAIAAgABAAMAAAANAAMAAgABAAQAAAANAAQAAgABAAUAAAAOAAAAAgACAAEAAAAOAAEAAgACAAIAAAAOAAIAAgACAAMAAAAOAAMAAgACAAQAAAAOAAQAAgACAAUAAAAPAAAAAgADAAEAAAAPAAEAAgADAAIAAAAPAAIAAgADAAMAAAAPAAMAAgADAAQAAAAPAAQAAgADAAUAAAAQAAAAAgAEAAEAAAAQAAEAAgAEAAIAAAAQAAIAAgAEAAMAAAAQAAMAAgAEAAQAAAAQAAQAAgAEAAUAAAARAAAAAgAFAAEAAAARAAEAAgAFAAIAAAARAAIAAgAFAAMAAAARAAMAAgAFAAQAAAARAAQAAgAFAAUAAAASAAAAAgAAAAEAAAASAAEAAgAAAAIAAAASAAIAAgAAAAMAAAASAAMAAgAAAAQAAAASAAQAAgAAAAUAAAATAAAAAgABAAEAAAATAAEAAgABAAIAAAATAAIAAgABAAMAAAATAAMAAgABAAQAAAATAAQAAgABAAUAAAAUAAAAAgACAAEAAAAUAAEAAgACAAIAAAAUAAIAAgACAAMAAAAUAAMAAgACAAQAAAAUAAQAAgACAAUAAAAVAAAAAgADAAEAAAAVAAEAAgADAAIAAAAVAAIAAgADAAMAAAAVAAMAAgADAAQAAAAVAAQAAgADAAUAAAAWAAAAAgAEAAEAAAAWAAEAAgAEAAIAAAAWAAIAAgAEAAMAAAAWAAMAAgAEAAQAAAAWAAQAAgAEAAUAAAAXAAAAAgAFAAEAAAAXAAEAAgAFAAIAAAAXAAIAAgAFAAMAAAD6////AQAAAAAAAAD6/wAAAQAAAAEAAAD6/wEAAQAAAAIAAAD6/wIAAQAAAAMAAAD6/wMAAQAAAAQAAAD6/wQAAQAAAAUAAAD7////AQABAAAAAAD7/wAAAQABAAEAAAD7/wEAAQABAAIAAAD7/wIAAQABAAMAAAD7/wMAAQABAAQAAAD7/wQAAQABAAUAAAD8////AQACAAAAAAD8/wAAAQACAAEAAAD8/wEAAQACAAIAAAD8/wIAAQACAAMAAAD8/wMAAQACAAQAAAD8/wQAAQACAAUAAAD9////AQADAAAAAAD9/wAAAQADAAEAAAD9/wEAAQADAAIAAAD9/wIAAQADAAMAAAD9/wMAAQADAAQAAAD9/wQAAQADAAUAAAD+////AQAEAAAAAAD+/wAAAQAEAAEAAAD+/wEAAQAEAAIAAAD+/wIAAQAEAAMAAAD+/wMAAQAEAAQAAAD+/wQAAQAEAAUAAAD/////AQAFAAAAAAD//wAAAQAFAAEAAAD//wEAAQAFAAIAAAD//wIAAQAFAAMAAAD//wMAAQAFAAQAAAD//wQAAQAFAAUAAAD6//n/AQAAAAAAAAD6//r/AQAAAAEAAAD6//v/AQAAAAIAAAD6//z/AQAAAAMAAAD6//3/AQAAAAQAAAD6//7/AQAAAAUAAAD7//n/AQABAAAAAAD7//r/AQABAAEAAAD7//v/AQABAAIAAAD7//z/AQABAAMAAAD7//3/AQABAAQAAAD7//7/AQABAAUAAAD8//n/AQACAAAAAAD8//r/AQACAAEAAAD8//v/AQACAAIAAAD8//z/AQACAAMAAAD8//3/AQACAAQAAAD8//7/AQACAAUAAAD9//n/AQADAAAAAAD9//r/AQADAAEAAAD9//v/AQADAAIAAAD9//z/AQADAAMAAAD9//3/AQADAAQAAAD9//7/AQADAAUAAAD+//n/AQAEAAAAAAD+//r/AQAEAAEAAAD+//v/AQAEAAIAAAD+//z/AQAEAAMAAAD+//3/AQAEAAQAAAD+//7/AQAEAAUAAAD///n/AQAFAAAAAAD///r/AQAFAAEAAAD///v/AQAFAAIAAAD///z/AQAFAAMAAAD///3/AQAFAAQAAAD///7/AQAFAAUAAAAAAP//AgAAAAAAAAABAP//AgABAAAAAAACAP//AgACAAAAAAADAP//AgADAAAAAAAEAP//AgAEAAAAAAAFAP//AgAFAAAAAAAGAP//AgAAAAAAAAAHAP//AgABAAAAAAAIAP//AgACAAAAAAAJAP//AgADAAAAAAAKAP//AgAEAAAAAAALAP//AgAFAAAAAAAMAP//AgAAAAAAAAANAP//AgABAAAAAAAOAP//AgACAAAAAAAPAP//AgADAAAAAAAQAP//AgAEAAAAAAARAP//AgAFAAAAAAASAP//AgAAAAAAAAATAP//AgABAAAAAAAUAP//AgACAAAAAAAVAP//AgADAAAAAAAWAP//AgAEAAAAAAAXAP//AgAFAAAAAAAMAAQAAgAAAAUAAAAXAAMAAgAFAAQAAAAXAAQAAgAFAAUAAAD0////AQAAAAAAAAD0/wAAAQAAAAEAAAD0/wEAAQAAAAIAAAD0/wIAAQAAAAMAAAD0/wMAAQAAAAQAAAD0/wQAAQAAAAUAAAD1////AQABAAAAAAD1/wAAAQABAAEAAAD1/wEAAQABAAIAAAD1/wIAAQABAAMAAAD1/wMAAQABAAQAAAD1/wQAAQABAAUAAAD2////AQACAAAAAAD2/wAAAQACAAEAAAD2/wEAAQACAAIAAAD2/wIAAQACAAMAAAD2/wMAAQACAAQAAAD2/wQAAQACAAUAAAD3////AQADAAAAAAD3/wAAAQADAAEAAAD3/wEAAQADAAIAAAD3/wIAAQADAAMAAAD3/wMAAQADAAQAAAD3/wQAAQADAAUAAAD4////AQAEAAAAAAD4/wAAAQAEAAEAAAD4/wEAAQAEAAIAAAD4/wIAAQAEAAMAAAD4/wMAAQAEAAQAAAD4/wQAAQAEAAUAAAD5////AQAFAAAAAAD5/wAAAQAFAAEAAAD5/wEAAQAFAAIAAAD5/wIAAQAFAAMAAAD5/wMAAQAFAAQAAAD5/wQAAQAFAAUAAAD0//n/AQAAAAAAAAD0//r/AQAAAAEAAAD0//v/AQAAAAIAAAD0//z/AQAAAAMAAAD0//3/AQAAAAQAAAD0//7/AQAAAAUAAAD1//n/AQABAAAAAAD1//r/AQABAAEAAAD1//v/AQABAAIAAAD1//z/AQABAAMAAAD1//3/AQABAAQAAAD1//7/AQABAAUAAAD2//n/AQACAAAAAAD2//r/AQACAAEAAAD2//v/AQACAAIAAAD2//z/AQACAAMAAAD2//3/AQACAAQAAAD2//7/AQACAAUAAAD3//n/AQADAAAAAAD3//r/AQADAAEAAAD3//v/AQADAAIAAAD3//z/AQADAAMAAAD3//3/AQADAAQAAAD3//7/AQADAAUAAAD4//n/AQAEAAAAAAD4//r/AQAEAAEAAAD4//v/AQAEAAIAAAD4//z/AQAEAAMAAAD4//3/AQAEAAQAAAD4//7/AQAEAAUAAAD5//n/AQAFAAAAAAD5//r/AQAFAAEAAAD5//v/AQAFAAIAAAD5//z/AQAFAAMAAAD5//3/AQAFAAQAAAD5//7/AQAFAAUAAAD0//P/AQAAAAAAAAD0//T/AQAAAAEAAAD0//X/AQAAAAIAAAD0//b/AQAAAAMAAAD0//f/AQAAAAQAAAD0//j/AQAAAAUAAAD1//P/AQABAAAAAAD1//T/AQABAAEAAAD1//X/AQABAAIAAAD1//b/AQABAAMAAAD1//f/AQABAAQAAAD1//j/AQABAAUAAAD2//P/AQACAAAAAAD2//T/AQACAAEAAAD2//X/AQACAAIAAAD2//b/AQACAAMAAAD2//f/AQACAAQAAAD2//j/AQACAAUAAAD3//P/AQADAAAAAAD3//T/AQADAAEAAAD3//X/AQADAAIAAAD3//b/AQADAAMAAAD3//f/AQADAAQAAAD3//j/AQADAAUAAAD4//P/AQAEAAAAAAD4//T/AQAEAAEAAAD4//X/AQAEAAIAAAD4//b/AQAEAAMAAAD4//f/AQAEAAQAAAD4//j/AQAEAAUAAAD5//P/AQAFAAAAAAD5//T/AQAFAAEAAAD5//X/AQAFAAIAAAD5//b/AQAFAAMAAAD5//f/AQAFAAQAAAD5//j/AQAFAAUAAAD6//P/AQAAAAAAAAD6//T/AQAAAAEAAAD6//X/AQAAAAIAAAD6//b/AQAAAAMAAAD6//f/AQAAAAQAAAD6//j/AQAAAAUAAAD7//P/AQABAAAAAAD7//T/AQABAAEAAAD7//X/AQABAAIAAAD7//b/AQABAAMAAAD7//f/AQABAAQAAAD7//j/AQABAAUAAAD8//P/AQACAAAAAAD8//T/AQACAAEAAAD8//X/AQACAAIAAAD8//b/AQACAAMAAAD8//f/AQACAAQAAAD8//j/AQACAAUAAAD9//P/AQADAAAAAAD9//T/AQADAAEAAAD9//X/AQADAAIAAAD9//b/AQADAAMAAAD9//f/AQADAAQAAAD9//j/AQADAAUAAAD+//P/AQAEAAAAAAD+//T/AQAEAAEAAAD+//X/AQAEAAIAAAD+//b/AQAEAAMAAAD+//f/AQAEAAQAAAD+//j/AQAEAAUAAAD///P/AQAFAAAAAAD///T/AQAFAAEAAAD///X/AQAFAAIAAAD///b/AQAFAAMAAAD///f/AQAFAAQAAAD///j/AQAFAAUAAAA=")
tile_set = ExtResource("1_h4fw4")

[node name="Layer2" type="TileMapLayer" parent="TileMap"]
visible = false
tile_map_data = PackedByteArray("AAAAAPr/AQADAAIAAAAAAPv/AQADAAMAAAAAAPz/AQADAAQAAAAAAP3/AQADAAUAAAAAAP7/AQADAAUAAAAAAP//AQADAAUAAAABAPr/AQAEAAIAAAABAPv/AQAEAAMAAAABAPz/AQAEAAQAAAABAP3/AQAEAAUAAAABAP7/AQAEAAUAAAABAP//AQAEAAUAAAACAPr/AQAFAAIAAAACAPv/AQAFAAMAAAACAPz/AQAFAAQAAAACAP3/AQAFAAUAAAACAP7/AQAFAAUAAAACAP//AQAFAAUAAAAAAPn/AQADAAEAAAABAPn/AQAEAAEAAAACAPn/AQAFAAEAAAAAAPj/AQADAAAAAAABAPj/AQAEAAAAAAACAPj/AQAFAAAAAAAAAPb/AQAAAAQAAAAAAPf/AQAAAAUAAAABAPf/AQABAAUAAAA=")
tile_set = ExtResource("1_h4fw4")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(239, -66)
script = ExtResource("2_ldgsr")
SPEED = 100
GRAVITY = 475

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(-1, -15)
zoom = Vector2(3.77, 3.14)

[node name="NPCTalk" type="Panel" parent="Player/Camera2D"]
visible = false
offset_left = -136.0
offset_top = -92.0
offset_right = 135.0
offset_bottom = -63.0

[node name="talk" type="Label" parent="Player/Camera2D/NPCTalk"]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 40.0
offset_bottom = 26.0
scale = Vector2(0.463, 0.657)

[node name="Typing" type="AudioStreamPlayer2D" parent="Player/Camera2D/NPCTalk"]
stream = ExtResource("3_o5yvi")
volume_db = 5.0

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("4_rku1e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(-0.5, -3)
shape = SubResource("RectangleShape2D_e2o6t")

[node name="Collisions" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collisions"]
position = Vector2(191.5, 2)
shape = SubResource("RectangleShape2D_fc0e3")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Collisions"]
position = Vector2(-95, -105)
rotation = 1.5708
shape = SubResource("RectangleShape2D_feb5d")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Collisions"]
position = Vector2(-285, -292)
rotation = 1.5708
shape = SubResource("RectangleShape2D_feb5d")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Collisions"]
position = Vector2(454, -107)
rotation = 1.5708
shape = SubResource("RectangleShape2D_feb5d")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Collisions"]
position = Vector2(238, -25)
shape = SubResource("RectangleShape2D_7jktm")

[node name="Sprite2D" type="Sprite2D" parent="Collisions"]
position = Vector2(238, -25)
scale = Vector2(0.335, 0.335)
texture = ExtResource("5_rfjv2")

[node name="Sprite2D4" type="Sprite2D" parent="Collisions"]
position = Vector2(340, -111.188)
scale = Vector2(0.39, 0.33625)
texture = ExtResource("5_rfjv2")

[node name="Sprite2D3" type="Sprite2D" parent="Collisions"]
position = Vector2(308.75, -51.125)
scale = Vector2(1.005, 0.8575)
texture = ExtResource("5_rfjv2")

[node name="Sprite2D2" type="Sprite2D" parent="Collisions"]
position = Vector2(123, -42)
scale = Vector2(1.4017, 0.693644)
texture = ExtResource("5_rfjv2")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Collisions"]
position = Vector2(123.5, -42)
shape = SubResource("RectangleShape2D_ryrav")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Collisions"]
position = Vector2(308.5, -51.5)
shape = SubResource("RectangleShape2D_eow3j")

[node name="Area2D" type="Area2D" parent="Collisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collisions/Area2D"]
position = Vector2(27.5, -40.5)
shape = SubResource("RectangleShape2D_j5wjh")

[node name="Laugh" type="AudioStreamPlayer2D" parent="Collisions/Area2D"]
stream = ExtResource("6_1phco")
volume_db = 16.565

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Collisions"]
position = Vector2(340, -111)
shape = SubResource("RectangleShape2D_vef74")

[node name="after_collect1" type="CollisionPolygon2D" parent="Collisions"]
position = Vector2(31, -75.1852)
scale = Vector2(1, 1.00164)
polygon = PackedVector2Array(16, 66, 16, -52, 1, -52, 1, -69, -15, -69, -15, -85, -31, -85, -31, 67)
disabled = true

[node name="Tutor" type="Label" parent="."]
offset_left = 105.0
offset_top = -136.0
offset_right = 342.0
offset_bottom = -61.0
scale = Vector2(0.72, 0.72)
text = "Space To Jump
Left-Right Arrow Keys To Move
E Key To Interact"

[node name="RestartLabel" type="Label" parent="."]
visible = false
offset_top = -70.0
offset_right = 45.0
offset_bottom = -47.0
scale = Vector2(0.6, 0.618726)
text = "R to Restart"

[node name="BOOST" type="StaticBody2D" parent="."]
position = Vector2(3, 2)

[node name="Area2D" type="Area2D" parent="BOOST"]

[node name="Sprite2D" type="Sprite2D" parent="BOOST/Area2D"]
position = Vector2(337, -145)
scale = Vector2(0.123333, 0.121111)
texture = ExtResource("7_nb51f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BOOST/Area2D"]
position = Vector2(337, -145)
shape = SubResource("RectangleShape2D_hve3p")

[node name="Collect" type="AudioStreamPlayer2D" parent="BOOST/Area2D"]
stream = ExtResource("8_nnt18")

[node name="npc1" type="StaticBody2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="npc1"]
position = Vector2(-164.688, -227.438)
scale = Vector2(0.0430799, 0.0399414)
texture = ExtResource("9_ewbju")

[node name="npc_area" type="Area2D" parent="npc1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="npc1/npc_area"]
position = Vector2(-151.5, -228.5)
shape = SubResource("RectangleShape2D_mfdv2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="npc1"]
position = Vector2(-163.5, -246)
shape = SubResource("RectangleShape2D_iotsf")

[connection signal="body_entered" from="Collisions/Area2D" to="Player" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="BOOST/Area2D" to="Player" method="_on_get_boost_body_entered"]
[connection signal="body_entered" from="npc1/npc_area" to="Player" method="_on_npc_area_body_entered"]
